@@ -56,8 +56,7 @@ class ZMForwardView extends ZMView {
      * @return string The request id.
      */
     public function getRequestId() {
-        //TODO: remove getTemplate()
-        return null != $this->requestId_ ? $this->requestId_ : $this->getTemplate();
+        return $this->requestId_;
     }
 
     /**
